--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,10 +1,3 @@
-.card {
-  width: 500px;
-  height: 600px;
-  border: 4px solid grey;
-  background-color: white;
-}
-
 .centred {
   position: fixed;
   top: 50%;
@@ -28,14 +21,16 @@ label {
   padding: 10px;
 }
 
-.card-title {
-  font-size: 300%;
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 70px;
-}
-
 .btn-primary {
   margin-top: 30px;
   text-align: center;
+}
+
+.error-msg {
+  color: red;
+  display: block;
+  text-align: center;
+  margin-top: 25px;
+  font-size: 150%;
+  font-style: italic;
 }
