--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,15 @@ body {
   background-color: white;
   max-width: 90%;
   max-height: 90%;
+  text-align: center;
+}
+
+.card-title {
+  font-size: 300%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-family: "Open Sans", "Segoe UI", Tahoma, sans-serif;
+  font-weight: 500;
 }
 
 input {
@@ -53,12 +62,4 @@ input {
   to {
     transform: rotate(360deg);
   }
-}
-
-.card-title {
-  font-size: 300%;
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  font-family: "Open Sans", "Segoe UI", Tahoma, sans-serif;
 }
